// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> Snapshots should match snapshot 1`] = `
<DocumentFragment>
  <label
    class=""
  >
    <p
      class="text-sm leading-tight tracking-wide text-subtleLight"
    >
      Foo
    </p>
    <div
      class="flex items-center h-12 p-3 mt-2 border rounded-lg gap-x-4 border-subtleLight"
    >
      <input
        class="text-base leading-normal tracking-normal text-subtleDark"
        type="text"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`<TextField /> Snapshots should match snapshot in default text-field with trailIcon prop 1`] = `
<DocumentFragment>
  <label
    class=""
  >
    <p
      class="text-sm leading-tight tracking-wide text-subtleLight"
    >
      Foo
    </p>
    <div
      class="flex items-center h-12 p-3 mt-2 border rounded-lg gap-x-4 border-subtleLight"
    >
      <input
        class="text-base leading-normal tracking-normal text-subtleDark"
        type="text"
      />
      <svg
        height="24px"
        role="presentation"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          transform="translate(2 4)"
        >
          <path
            d="M6.323,3.162A3.162,3.162,0,1,1,3.161,0,3.162,3.162,0,0,1,6.323,3.162Z"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-miterlimit="10"
            stroke-width="1.5px"
            transform="translate(6.839 4.891)"
          />
          <path
            d="M9.248,14.6c3.808,0,7.291-2.738,9.252-7.3C16.539,2.738,13.056,0,9.248,0h0C5.444,0,1.961,2.738,0,7.3c1.961,4.564,5.444,7.3,9.252,7.3Z"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-miterlimit="10"
            stroke-width="1.5px"
            transform="translate(0.75 0.751)"
          />
        </g>
      </svg>
    </div>
  </label>
</DocumentFragment>
`;
